# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  20 Dec 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server/files/vmware-server-2.rc:
  Add hald requirement to vmware-server-2 initscript.

  28 Nov 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-player/files/vmware-player-2.5.0.118166-installer.pa
  tch, ++, ++, ++,
  -app-emulation/vmware-player/files/2.5.0.118166/vmware-player.py.patch,
  -app-emulation/vmware-player/files/2.5.0.118166/vmware-player-extras.py.pa
  tch, app-emulation/vmware-player/files/helpers/vmware-config.sh:
  Version bump vmware-player to 2.5.1.126130 and fix the vmware-config.sh
  issue.

  27 Nov 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-workstation/files/vmware-workstation-6.5.0.118166-in
  staller.patch,
  +app-emulation/vmware-workstation/files/6.5.1.126130/vmware-player.py.patc
  h, -app-emulation/vmware-workstation/files/6.5.0.118166,
  +app-emulation/vmware-workstation/files/6.5.1.126130/vmware-player-extras.
  py.patch,
  +app-emulation/vmware-workstation/files/6.5.1.126130/vmware-vix.py.patch,
  +app-emulation/vmware-workstation/files/vmware-workstation-6.5.1.126130-in
  staller.patch,
  +app-emulation/vmware-workstation/files/6.5.1.126130/vmware-workstation.py
  .patch, app-emulation/vmware-workstation/files/helpers/vmware-config.sh:
  Version bump vmware-workstation and fix an issue with the vmware-config
  helper.

  20 Nov 2008; Mike Auty <ikelos@gentoo.org>
  x11-libs/libview/libview-0.6.2.ebuild:
  Include fix in libview for 239325.

  20 Nov 2008; Mike Auty <ikelos@gentoo.org>
  +x11-libs/libview/libview-0.6.2.ebuild:
  Bump latest version of libview.

  19 Nov 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild,
  app-emulation/open-vm-tools/open-vm-tools-0.0.20081010.123053.ebuild:
  Change hardened warning on open-vm-tools.
