@@ -6,13 +6,5 @@ AUX open-vm.confd 88 RMD160 5e398024e72a871f258d73e09f02e37a815443b0 SHA1 56133c
 AUX open-vm.initd 1875 RMD160 9d2cc36fd93e70ae20eecd49b10c4da0e09aad69 SHA1 1702f267d32ca138e0e99d9ed86b4abc32cc3997 SHA256 1799b78836441b389de0b3d92aad80fcf020fe8b57da4f6d6999f86ee87f51bf
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
-DIST open-vm-tools-2008.04.14-87182.tar.gz 2430703 RMD160 2003b86f881b8a9b51c61e833b0b7d4aca70e083 SHA1 0394f73975a34699b92ce90822803fdb365abc6f SHA256 34c19a50650e70fbaa3c1d01803cc96fd86dde4d5f1349bf444026a4b1016b07
-DIST open-vm-tools-2008.05.15-93241.tar.gz 2462536 RMD160 6482557a2bfd5628093e7d02262c6cb1f072c334 SHA1 58c1861ffdedb205fe58f65b29ad47bf72ded836 SHA256 465657c6c59b88458bb6bf8a5411ab7d1e5aef548e931b4291c8cec1cba55ea3
-DIST open-vm-tools-2008.07.01-102166.tar.gz 2558112 RMD160 7324a0f7f4f99ee23547bf51aaba316c79ceee55 SHA1 311de7dcc6bf50f017a399180b884150c21a6f32 SHA256 51293ff716bff35ecd03e8747280280be0a748e9fc5ec7c2d02d936b0c86d1c5
-DIST open-vm-tools-2008.08.08-109361.tar.gz 2971141 RMD160 4ea0a6aa2edda2bc404c865dc5b58f3a177ae411 SHA1 1c44c3524cd9cbc5870f1c6065b03a6b31859a25 SHA256 b7abff74f87b05cf1d78c5076c1e5c83b37639eed84498834becdfc20e4f798e
-DIST open-vm-tools-2008.10.10-123053.tar.gz 3186908 RMD160 770cb2ccfca24814cbd04fe3b1d076fdd7e23f1e SHA1 c2f3faa67ca40d4b307df5d87659fa898bcb09e7 SHA256 c67e247d85664747363d830d0d893251f0b9978076ac9ac1a364d6cc5aeecc91
-EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3683 RMD160 1ed0a118495b177076ac4585c512770047ccc02b SHA1 49b56355f9b39f5f2c71fac0a7e723dbaaa63836 SHA256 6ddba316a27d4aac5390b983e0ab905a80727c92a8b0c82e42f68a367b9a525c
-EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3638 RMD160 70ab5b74e1c4452cdc6cc2bfaa61fa8048cc5309 SHA1 d95a10736c41eaf1970b50059f756bbff4506868 SHA256 9fcd8f3c40f8bd8cdb04fed77626b4a485ffc8680b876bfd5734c2a898393697
-EBUILD open-vm-tools-0.0.20080701.102166.ebuild 2701 RMD160 5bc76a6525535758de70ec1fbb57add017e7b1fa SHA1 6bb9d0bc96ed8b1fb9fafe3f8bca9b6cf736617a SHA256 e6dee5b5e4c2cf9aa8f0968b44e5f49acf96c813c65ed7e4bd7706e4f93dc1d8
-EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2876 RMD160 0106936fb6a0a566cfef83a3b38de33706cd35a5 SHA1 a31b130987e28f05175845b07cfddcf7d628a03c SHA256 c833808e219220e50467eb0564b07f286cb573a3a7c3019d50aa1792f40b6b18
-EBUILD open-vm-tools-0.0.20081010.123053.ebuild 2876 RMD160 0106936fb6a0a566cfef83a3b38de33706cd35a5 SHA1 a31b130987e28f05175845b07cfddcf7d628a03c SHA256 c833808e219220e50467eb0564b07f286cb573a3a7c3019d50aa1792f40b6b18
+DIST open-vm-tools-2008.12.23-137496.tar.gz 3317919 RMD160 893d37774593b0d4fa72387ed25bbbd7b90af3c5 SHA1 6b30e81279da31767d135e9d609bd1a5731dccb8 SHA256 41fabaa1be0c865376dbe8dc472baebb559ac6a9f0314c0d4786720a2d354444
+EBUILD open-vm-tools-0.0.20081223.137496.ebuild 2967 RMD160 9fef828b6c198fe7d445a8532e9366642dabcae5 SHA1 792735aba3d52cdcc893c91ba062d095053b92c4 SHA256 ecd51b946a1dd51cd24917107c7b2e18e00d232950f66042cf046d928fb4acee
