@@ -1,8 +1,8 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild,v 1.2 2007/12/22 23:05:54 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/open-vm-tools/open-vm-tools-0.0.20081223.137496.ebuild,v 1.1 2008/12/31 00:39:39 ikelos Exp $
 
-inherit pam eutils linux-mod autotools versionator
+inherit pam eutils linux-mod versionator
 
 MY_DATE="$(get_version_component_range 3)"
 MY_BUILD="$(get_version_component_range 4)"
@@ -18,7 +18,7 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~amd64"
-IUSE="X xinerama"
+IUSE="X xinerama icu unity"
 DEPEND="
 		virtual/linux-sources
 		sys-apps/ethtool
@@ -26,6 +26,10 @@ DEPEND="
 			x11-libs/libX11
 			x11-libs/gtk+
 			)
+		unity? (
+			x11-libs/libXScrnSaver
+			dev-libs/uriparser
+		)
 		xinerama? (
 			x11-libs/libXinerama
 			)
@@ -34,6 +38,7 @@ DEPEND="
 		!app-emulation/vmware-esx-tools
 		sys-process/procps
 		dev-libs/libdnet
+		icu? ( dev-libs/icu )
 		"
 
 RDEPEND="${DEPEND/virtual\/linux\-sources/}
@@ -43,12 +48,18 @@ RDEPEND="${DEPEND/virtual\/linux\-sources/}
 			x11-drivers/xf86-video-vmware
 			x11-drivers/xf86-input-vmmouse
 		 )
+		 unity? (
+			x11-libs/libXScrnSaver
+			dev-libs/uriparser
+		 )
 "
 
 VMWARE_MOD_DIR="modules/linux"
 VMWARE_MODULE_LIST="vmblock vmhgfs vmsync vmmemctl vmxnet"
 
 pkg_setup() {
+	use unity && ! use xinerama && \
+	  die 'The Unity USE flag requires USE="xinerama" as well'
 
 	linux-mod_pkg_setup
 	MODULE_NAMES=""
@@ -65,25 +76,24 @@ pkg_setup() {
 		MODULE_NAMES="${MODULE_NAMES} ${mod}(${MODTARGET}:${S}/${VMWARE_MOD_DIR}/${mod})"
 	done
 
-	ewarn "If you're compiling for a hardened target, please use the hardened"
-	ewarn "nopie compiler in the hardened profile (select it using gcc-config)."
-	ewarn "For more details please see bug #200376, comment 18."
+	ewarn "If you're compiling with a hardened toolchain, please use the"
+	ewarn "hardenednopie gcc profile (see bug #200376, comment 18)."
 
 	enewgroup vmware
-
 }
 
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-	# epatch "${FILESDIR}/${PN}-as-needed.patch"
-
-	eautoreconf
+	epatch "${FILESDIR}/default-scripts.patch"
 }
 
 src_compile() {
 	econf \
+	--without-kernel-modules \
+	$(use_with icu) \
 	$(use_with X x) \
+	$(use_enable unity) \
 	$(use_enable xinerama multimon) \
 	|| die "Error: econf failed!"
 
@@ -98,44 +108,16 @@ src_install() {
 
 	pamd_mimic_system vmware-guestd auth account
 
-	# Install the various tools
-	cd "${S}"
-	VMWARE_BIN_LIST="hgfsclient xferlogs"
-	VMWARE_SBIN_LIST="guestd checkvm"
-	if use X; then
-		# Fix up the vmware-user tool's name
-		mv vmware-user/vmware-user vmware-user/user
-		mv vmware-user user
-		VMWARE_BIN_LIST="${VMWARE_BIN_LIST} user toolbox"
-	fi
-	for i in ${VMWARE_BIN_LIST}; do
-		newbin ${i}/${i} vmware-${i} || die "Failed installing ${i}"
-	done
-	for i in ${VMWARE_SBIN_LIST}; do
-		newsbin ${i}/${i} vmware-${i} || die "Failed installing ${i}"
-	done
+	emake install DESTDIR="${D}" || die "Failed to install"
 
-	dolib libguestlib/.libs/libguestlib.{so.0.0.0,a}
-
-	# Deal with the hgfsmounter
-	into /
-	newsbin hgfsmounter/hgfsmounter mount.vmhgfs
-	fperms u+s /sbin/mount.vmhgfs
-	### FROM THIS POINT ON, into IS SET TO ${ROOT}/ not ${ROOT}/usr !!!
-
-	# Install the /etc/ files
-	exeinto /etc/vmware-tools
-	doexe scripts/linux/*
-	insinto /etc/vmware-tools
-	doins "${FILESDIR}/tools.conf"
-	# Only install this, when X is being used. Else it's useless waste of
-	# ressources when checking continuously for processes that will never appear
-	use X && doins "${FILESDIR}/xautostart.conf"
 	newinitd "${FILESDIR}/open-vm.initd" vmware-tools
 	newconfd "${FILESDIR}/open-vm.confd" vmware-tools
 
 	if use X;
 	then
+		exeinto /etc/X11/xinit/xinitrc.d
+		doexe "${FILESDIR}/10-vmware-tools"
+
 		elog "To be able to use the drag'n'drop feature of VMware for file"
 		elog "exchange, you need to do this:"
 		elog "	Add 'vmware-tools' to your default runlevel"
