@@ -2,6 +2,16 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  31 Dec 2008; Mike Auty <ikelos@gentoo.org>
+  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080414.87182.ebuild,
+  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080515.93241.ebuild,
+  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080701.102166.ebuild,
+  -app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild,
+  -app-emulation/open-vm-tools/open-vm-tools-0.0.20081010.123053.ebuild,
+  +app-emulation/open-vm-tools/open-vm-tools-0.0.20081223.137496.ebuild:
+  Update open-vm-tools to the latest version in the tree, clean out the
+  cruft.
+
   20 Dec 2008; Mike Auty <ikelos@gentoo.org>
   app-emulation/vmware-server/files/vmware-server-2.rc:
   Add hald requirement to vmware-server-2 initscript.
